v2_0_2
------
	1. go back to a single header file (treestream.h) since splitting the headers
	breaks mkanalyzer.py
v2_0_1
------
	1. minor fix in testme.h
	
v2_0_0
------
	1. added jupyter notebook testtreestream.ipynb.
	2. made .py, .cc and .ipynb as similar as possible.
	
v1_1_2
------
	1. remove add and select for "char" and "unsigned long" because they seem
	to cause PyROOT to screw up the function overloading in otreestream.
	2. split treestream.h into itreestream.h and otreestream.h.
	3. add testtreestream.cc, update testtreestream.py to match the former.
	4. add treestream.py to allow, e.g., "from treestream import itreestream"
	5. split of Field declaration into separate header (Field.h)
	6. verify that all works with root v6_14_04.
	
V1_1_1
------
	1. Fix faulty interaction between chains and friends.

V1_1_0
------
	1. Allow reading of multiple trees.
	2. Modify mkvariables and mkanalyzer to make use of 1.
V1_0_2
------
	1. Improve Makefile
	2. Allow selection of branches in eventBuffer
	
v1_0_1
------
	1. Fix Makefile
	
v1_0_0
------
	1. First release of treestream as a seperate package from
	TheNtupleMaker