@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to JupyROOT 6.28/04\n",
+      "loaded treestream\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys\n",
     "import ROOT as rt\n",
@@ -36,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_ntuple(filename=\"test.root\", treename=\"Events\"):\n",
     "    from time import ctime\n",
-    "    print \"write: %s\" % filename\n",
+    "    print(\"write: %s\" % filename)\n",
     "    \n",
     "    stream = otreestream(filename, treename, ctime())\n",
     "\n",
@@ -88,10 +97,12 @@
     "        # generate some data\n",
     "        njet.value = rand.Integer(10)\n",
     "        jetet.clear()\n",
+    "        \n",
     "        ht.value = 0.0 # see ctypes documentation\n",
     "        for i in range(njet.value):\n",
     "            jetet.push_back(rand.Exp(10))\n",
     "            ht.value += jetet[i]\n",
+    "            \n",
     "        comment.assign(\"event: %5d njet = %2d\" % \\\n",
     "                       (entry + 1, njet.value))\n",
     "\n",
@@ -99,12 +110,10 @@
     "        stream.commit()\n",
     "\n",
     "        if entry % step == 0:\n",
-    "            print \"%5d%5d%10.2f (%s)\" % (entry, \n",
+    "            print(\"%5d%5d%10.2f (%s)\" % (entry, \n",
     "                                         jetet.size(), \n",
     "                                         ht.value, \n",
-    "                                         comment)\n",
-    "        \n",
-    "    stream.close()"
+    "                                         comment))"
    ]
   },
   {
@@ -116,12 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_ntuple(filename=\"test.root\", treename=\"Events\"):\n",
-    "    print \"read: %s\" % filename\n",
+    "    print(\"read: %s\" % filename)\n",
     "    stream = itreestream(filename, treename)\n",
     "    stream.ls()\n",
     "\n",
@@ -144,29 +153,17 @@
     "    for entry in range(entries):\n",
     "        # read event into memory\n",
     "        stream.read(entry)\n",
+    "\n",
     "        if entry % step == 0:\n",
-    "            print \"%5d%5d%10.2f (%s)\" % (entry, \n",
+    "            print(\"%5d%5d%10.2f (%s)\" % (entry, \n",
     "                                         ET.size(), \n",
     "                                         HT.value, \n",
-    "                                         comment)       \n",
-    "    stream.close()    "
+    "                                         comment))       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    write_ntuple()\n",
-    "    print\n",
-    "    read_ntuple()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +176,6 @@
       "  400    4     45.96 (event:   401 njet =  4)\n",
       "  600    2     50.98 (event:   601 njet =  2)\n",
       "  800    9     98.88 (event:   801 njet =  9)\n",
-      "\n",
       "read: test.root\n",
       "    0    9     65.75 (event:     1 njet =  9)\n",
       "  200    1     23.90 (event:   201 njet =  1)\n",
@@ -198,7 +194,8 @@
     }
    ],
    "source": [
-    "main()"
+    "write_ntuple()\n",
+    "read_ntuple()"
    ]
   },
   {
@@ -211,23 +208,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
